# routes/cartRoutes.js
@@ -3,6 +3,7 @@ import {
   addItemToCart,
   applyCoupon,
   getCart,
+  modifyCartQuantity,
   removeItemFromCart,
 } from "../controllers/cartController.js";
 import { protect } from "../middleware/authmiddleware.js";
@@ -14,6 +15,8 @@ router.use(protect);
 router.get("/", getCart);
 
 router.post("/", addItemToCart);
+
+router.post("/modify-quantity", modifyCartQuantity);
 
 router.delete("/items/:productId", removeItemFromCart);
 
